# rabbit-poc

./: Cargo.toml  README.md
src/: main.rs
src/api/: health.rs  mod.rs
src/rabbit/: generic_function.rs  mod.rs  rabbit_builder.rs  rabbit_handler.rs  test.rs
src/rabbit/interfaces/: mod.rs  users_rabbit.rs
src/repository/: mod.rs
src/repository/users/: create.rs  mod.rs  schema.rs  users_repository.rs
