[package]
name = "brassing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "2.0.0"
lapin = "2.1.1"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.0"
env_logger = "0.10.0"
tokio-executor = "0.1.10"
tokio-executor-trait = "2.0.1"
async-trait = "0.1.68"
thiserror = "1.0.30"
deadpool = "0.9.0"
deadpool-lapin = "0.10.0"
tokio = { version = "1.12.0", features = ["macros", "time", "rt-multi-thread"] }